profile.css
.navbar {
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 1.4rem 5%;
  position: fixed;
  background-color: #3a3a99;
  box-shadow: 0 2px 4px rgb(0, 0, 0);
  top: 0;
  left: 0;
  right: 0;
  z-index: 9999;
}

ul.menu a {
  text-decoration: none;
}

.navbar .mainLogo h1 {
  font-size: 1.8rem;
  color: white;
}

.navbar .menu a {
  color: white;
  display: inline-block;
  font-size: 1.2rem;
  margin: 0 1rem;
}

.navbar .menu a::after {
  content: "";
  display: block;
  padding-bottom: 0.3rem;
  border-bottom: 0.1rem solid white;
  transform: scaleX(0);
  transition: 0.2s linear;
}

.navbar .menu a:hover::after {
  transform: scaleX(0.5);
}

.navbar .menu-icons a {
  color: white;
  margin: 0 0.5rem;
  font-size: 1.2rem;
}

#hamburger-menu {
  display: none;
  text-decoration: none;
}

* {
  margin: 0;
  font-family: "Poppins", sans-serif;
  scroll-behavior: smooth;
  color: rgb(57, 56, 56);
}

html,
body {
  height: 725px;
  background-image: url("img/BG.jpg");
}

.wrapper {
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: center;
  height: 725px;
}

.left {
  /* background-color: red; */
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  width: 50%;
  height: 100%;
  animation: slideInFromLeft 1s ease-in-out;
}

@keyframes slideInFromLeft {
  0% {
    opacity: 0;
    transform: translateX(-10%);
  }
  100% {
    opacity: 1;
    transform: translateX(0);
  }
}

.right {
  /* background-color: aqua; */
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  width: 50%;
  height: 100%;
  padding-right: 150px;
  animation: slideInFromBottom 1s ease-in-out;
}

@keyframes slideInFromBottom {
  0% {
    opacity: 0;
    transform: translateY(10%);
  }
  100% {
    opacity: 1;
    transform: translateY(0);
  }
}

.profilepic {
  display: flex;
  flex-direction: column;
  width: 50%;
  height: 50%;
  align-items: center;
  justify-content: center;
  padding-top: 10%;
}

.profileborder {
  display: flex;
  flex-direction: column;
  width: 13vw;
  height: 13vw;
  background-color: #6666e2;
  align-items: center;
  justify-content: center;
  border-radius: 100%;
  padding: 6px;
}

.username {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}

.username h5 {
  margin-top: 10px;
  border: 0.4vw solid;
  border-radius: 50px;
  background-color: transparent;
  padding: 10px;
  padding-right: 40px;
  padding-left: 40px;
  color: white;
  font-size: 1.3vw;
}

.username h1 {
  color: white;
}

.foto {
  width: 13vw;
  height: 13vw;
  border-radius: 100%;
}

.username {
  font-size: 1.5vw;
  margin-top: 40px;
}

.profile {
  display: flex;
  flex-direction: column;
  width: 28vw;
  height: 25vw;
  background-color: #e7e6e6;
  align-items: left;
  justify-content: left;
  border-radius: 20px;
  padding: 50px;
  padding-top: 30px;
  padding-bottom: 80px;
  margin-top: 60px;
}

@media (max-width: 950px) {
  .profile {
    height: 28vw;
  }
}

.tombol {
  display: flex;
  flex-direction: row;
  align-items: right;
  justify-content: right;
  margin-top: 15px;
}

#tombolKembali {
  background-color: #6666e2;
  color: rgb(255, 255, 255);
}

#tombolKembali:hover {
  background-color: white;
  color: rgb(57, 56, 56);
}

#ubahFoto {
  color: #6666e2;
  display: none;
  margin-right: 10px;
}

#ubahFoto:hover {
  color: white;
}

button {
  color: #6666e2;
  font-size: 0.7vw;
  border-radius: 50px;
  padding: 0.8vw;
  margin-left: 9px;
  padding-right: 35px;
  padding-left: 35px;
  background-color: white;
  font-weight: bolder;
  border: 2px solid rgb(174, 168, 193);
  transition: background-color 0.5s, color 0.5s, box-shadow 0.5s;
}

button:hover {
  background-color: #6666e2;
  color: rgb(255, 255, 255);
  box-shadow: 0px 20px 20px rgba(0, 0, 0, 0.25);
}

.profile h1 {
  font-size: 2vw;
  margin-top: 0px;
}

.profile hr {
  margin-bottom: 20px;
}

.profile p {
  margin-top: 1px;
  font-size: 1vw;
  font-weight: bold;
}

.input {
  color: grey;
}

.profile input[type="text"] {
  margin-top: 2px;
  font-size: 1vw;
  font-weight: bolder;
  border-radius: 6px;
  padding-left: 10px;
  background-color: #ffffff;
  border: 5px solid #ffffff;
  outline: none;
}

.profile input[type="date"] {
  font-size: 1vw;
  padding-top: 15px;
  padding-bottom: 15px;
  padding-left: 10px;
  border-radius: 6px;
  border: 5px solid #ffffff;
  font-weight: bolder;
}

@media (max-width: 768px) {
  .wrapper {
    flex-direction: column;
  }
  .left {
    margin-top: 20%;
    width: 100%;
    height: 40%;
  }
  .right {
    width: 100%;
    height: 50%;
    padding-right: 0;
  }
  .profilepic {
    padding-top: 0;
  }
  .profileborder {
    width: 20vw;
    height: 20vw;
  }
  .username h5 {
    font-size: 2vw;
  }
  .foto {
    width: 20vw;
    height: 20vw;
  }
  .username {
    font-size: 2vw;
    margin-top: 20px;
  }
  .profile {
    margin-top: 200px;
    width: 80vw;
    padding: 20px;
    padding-bottom: 250px;
  }
  .profile h1 {
    font-size: 3vw;
  }
  .profile p {
    font-size: 2vw;
  }
  .profile input[type="text"] {
    font-size: 2vw;
  }
  .profile input[type="date"] {
    font-size: 2vw;
  }
  .tombol {
    margin-top: 20px;
  }
  button {
    font-size: 1.5vw;
    padding: 1.5vw;
    margin-left: 0;
    margin-right: 0;
  }
  #ubahFoto {
    margin-right: 0;
  }
}

@media (max-width: 768px) {
  html {
    font-size: 55%;
  }

  #hamburger-menu {
    display: inline-block;
  }

  .navbar .menu {
    position: absolute;
    top: 100%;
    right: -100%;
    background: white;
    width: 23rem;
    height: 100vh;
    transition: 0.3s;
  }

  .navbar .menu.active {
    right: 0;
  }

  .navbar .menu a {
    color: black;
    display: block;
    margin: 1.5rem;
    padding: 0.5rem;
    font-size: 1.5rem;
  }

  .navbar .menu a::after {
    border-bottom: 0.1rem solid black;
    transform-origin: 0 0;
  }

  .navbar .menu a:hover::after {
    transform: scaleX(0.2);
  }
}

@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap");
.chatbot-toggler {
  position: fixed;
  bottom: 30px;
  right: 35px;
  outline: none;
  border: none;
  height: 65px;
  width: 50px;
  display: flex;
  cursor: pointer;
  align-items: center;
  justify-content: center;
  border-radius: 50%;
  background: #724ae8;
  transition: all 0.2s ease;
}
body.show-chatbot .chatbot-toggler {
  transform: rotate(90deg);
}
.chatbot-toggler span {
  color: #fff;
  position: absolute;
}
.chatbot-toggler span:last-child,
body.show-chatbot .chatbot-toggler span:first-child {
  opacity: 0;
}
body.show-chatbot .chatbot-toggler span:last-child {
  opacity: 1;
}
.chatbot {
  position: fixed;
  right: 35px;
  bottom: 105px;
  width: 420px;
  height: 500px;
  background: #fff;
  border-radius: 15px;
  overflow: hidden;
  opacity: 0;
  pointer-events: none;
  transform: scale(0.5);
  transform-origin: bottom right;
  box-shadow: 0 0 128px 0 rgba(0, 0, 0, 0.1),
    0 32px 64px -48px rgba(0, 0, 0, 0.5);
  transition: all 0.1s ease;
}
body.show-chatbot .chatbot {
  opacity: 1;
  pointer-events: auto;
  transform: scale(1);
}
.chatbot header {
  padding: 16px 0;
  position: relative;
  text-align: center;
  color: #fff;
  background: #724ae8;
  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
}
.chatbot header span {
  position: absolute;
  right: 15px;
  top: 50%;
  display: none;
  cursor: pointer;
  transform: translateY(-50%);
}
header h2 {
  font-size: 1.4rem;
}
.chatbot .chatbox {
  overflow-y: auto;
  height: 510px;
  padding: 30px 20px 100px;
}
.chatbot :where(.chatbox, textarea)::-webkit-scrollbar {
  width: 6px;
}
.chatbot :where(.chatbox, textarea)::-webkit-scrollbar-track {
  background: #fff;
  border-radius: 25px;
}
.chatbot :where(.chatbox, textarea)::-webkit-scrollbar-thumb {
  background: #ccc;
  border-radius: 25px;
}
.chatbox .chat {
  display: flex;
  list-style: none;
}
.chatbox .outgoing {
  margin: 20px 0;
  justify-content: flex-end;
}
.chatbox .incoming span {
  width: 32px;
  height: 32px;
  color: #fff;
  cursor: default;
  text-align: center;
  line-height: 32px;
  align-self: flex-end;
  background: #724ae8;
  border-radius: 4px;
  margin: 0 10px 7px 0;
}
.chatbox .chat p {
  white-space: pre-wrap;
  padding: 12px 16px;
  border-radius: 10px 10px 0 10px;
  max-width: 75%;
  color: #fff;
  font-size: 0.95rem;
  background: #724ae8;
}
.chatbox .incoming p {
  border-radius: 10px 10px 10px 0;
}
.chatbox .chat p.error {
  color: #721c24;
  background: #f8d7da;
}
.chatbox .incoming p {
  color: #000;
  background: #f2f2f2;
}
.chatbot .chat-input {
  display: flex;
  gap: 5px;
  position: absolute;
  bottom: 0;
  width: 100%;
  background: #fff;
  padding: 3px 20px;
  border-top: 1px solid #ddd;
}
.chat-input textarea {
  height: 55px;
  width: 100%;
  border: none;
  outline: none;
  resize: none;
  max-height: 180px;
  padding: 15px 15px 15px 0;
  font-size: 0.95rem;
}
.chat-input span {
  align-self: flex-end;
  color: #724ae8;
  cursor: pointer;
  height: 55px;
  display: flex;
  align-items: center;
  visibility: hidden;
  font-size: 1.35rem;
}
.chat-input textarea:valid ~ span {
  visibility: visible;
}

@media (max-width: 490px) {
  .chatbot-toggler {
    right: 20px;
    bottom: 20px;
  }
  .chatbot {
    right: 0;
    bottom: 0;
    height: 93%;
    border-radius: 0;
    width: 100%;
  }
  .chatbot .chatbox {
    height: 90%;
    padding: 25px 15px 100px;
  }
  .chatbot .chat-input {
    padding: 5px 15px;
  }
  .chatbot header span {
    display: block;
  }
}

